--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8070}
 spring.application.name=users
 
-#eureka.client.register-with-eureka=true
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
